fix(report): removed z-index from table header

--- a/Front-End/src/Component/Common/CustomTable/styles.scss
+++ b/Front-End/src/Component/Common/CustomTable/styles.scss
@@ -27,7 +27,6 @@
   position: sticky;
   top: 0;
   background-color: var.$tertiary-color;
-  z-index: 2;
 }
 
 .custom_table th,
